--- a/languages/save-as-image-pdfcrowd.pot
+++ b/languages/save-as-image-pdfcrowd.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Save as Image by Pdfcrowd plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Save as Image by Pdfcrowd 3.2.3\n"
+"Project-Id-Version: Save as Image by Pdfcrowd 3.3.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/save-as-image-pdfcrowd\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,9 @@ msgid "Save as Image by Pdfcrowd"
 msgstr ""
 
 msgid "Settings"
+msgstr ""
+
+msgid "License error"
 msgstr ""
 
 msgid "Email with the image has been sent."
